--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
         <link rel="stylesheet" href="asset/bootstrap.min.css">
         <title>Document</title>
     </head>
-    <body id="body"">
+    <body id="body" style="text-transform: capitalize;">
 
-        <div class="container py-5">
+        <h3 class="text-center mt-2">
+            this is the web to find the RGB you want 
+        </h3>
+
+        <div class="container mt-3">
             <div class="row">
                 <div class="col-md-4"></div>
                 <div class="col-md-4">
